--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 
 :root {
     --dark-blue: #363f5f;
+    --green: #49aa26;
+    --light-green: #3dd705;
+    --red: #e92929;
 }
 
 * {
@@ -48,12 +51,28 @@ h2 {
 /* Links & Buttons ===================================================== */
 
 a {
-    color: #49aa26;
+    color: var(--green);
     text-decoration: none;
 }
 
+button {
+    width: 100%;
+    height: 50px;
+    border: none;
+    color: #fff;
+    background: var(--green);
+    padding: 0;
+    border-radius: 0.25rem;
+    cursor: pointer;
+}
+
+button:hover {
+    background: var(--light-green);
+
+}
+
 a:hover {
-    color: #3dd705;
+    color: var(--light-green);
 }
 
 .button.new {
@@ -61,11 +80,26 @@ a:hover {
     margin-bottom: 0.8rem;
 }
 
+.button.cancel {
+    color: var(--red);
+    border: 2px var(--red) solid;
+    border-radius: 0.25rem;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.6;
+}
+
+.button.cancel:hover {
+    opacity: 1;
+}
+
 /* Header ===================================================== */
 
 header {
     background: #2d4a22;
-    padding: 2rem 0px 10rem;
+    padding: 2rem 0 13rem;
     text-align: center;
 }
 
@@ -110,19 +144,23 @@ header {
 }
 
 .card.total {
-    background: #49aa26;
+    background: var(--green);
     color: #fff;
 }
 
 /* Table ===================================================== */
 
-#data-table {
+#transaction {
     display: block;
     width: 100%;
-    border-spacing: 0px 8px;
-    color: #969cb3;
-
     overflow-x: auto;
+    
+}
+
+#data-table {    
+    width: 100%;
+    border-spacing: 0 0.5rem;
+    color: #969cb3;
 }
 
 table thead tr th:first-child,
@@ -165,8 +203,73 @@ td.income {
 }
 
 td.expense {
-    color: #e92929;
+    color: var(--red);
 }
+
+/* Modal ===================================================== */
+
+.modal-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal {
+    background: #f0f2f5;
+    padding: 2.4rem;
+    position: relative;
+}
+
+/* Form ===================================================== */
+
+#form {
+    max-width: 500px;
+}
+
+#form h2 {
+    margin-top: 0;
+}
+
+input {
+   border: none;
+   border-radius: 0.2rem;
+   padding: 0.8rem;
+   width: 100%;
+}
+
+.input-group {
+    margin-top: 00.8rem;
+}
+
+.input-group small {
+    opacity: 0.4;
+}
+
+.input-group.actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.input-group.actions .button,
+.input-group.actions button {  
+    width: 48%;
+}
+
+
+
 
 /* Footer ===================================================== */
 
